<resources>
    <string name="app_name">GirdThySword Pro</string>
    <string name="logo_cd">Logo that says Gird Thy Sword</string>
    <string name="logo_path">logo_new_pro.png</string>
    <string name="login_tagline">Before you go out and live the Christian Life</string>
    <string name="title_activity_home">Home</string>
    <string name="facebook_image">images/social/facebook.png</string>
    <string name="instagram_image">images/social/instagram.png</string>
    <string name="twitter_image">images/social/twitter.png</string>
    <string name="wordpress_image">images/social/wordpress.png</string>
    <string name="linkedin_image">images/social/linkedin.png</string>
    <string name="title_fragment_dailies">Dailies</string>
    <string name="title_fragment_overview">Overview</string>
    <string name="title_fragment_forge">Forge</string>
    <string name="title_fragment_reader">Reader</string>
    <string name="title_fragment_progress">Progress</string>
    <string name="title_fragment_global">Global</string>
    <string name="title_fragment_admin">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile_header_cd">The app details of the user</string>
    <string name="profile_image_cd">Profile Image of the user</string>
    <string name="default_display_name">Anonymous User with a Very Long Name</string>
    <string name="default_level_description">Beginner (Level 1)</string>
    <string name="default_font_path">fonts/Asket Condensed Extrabold.ttf</string>
    <string name="default_font_name">Asket Condensed Extrabold</string>
    <string name="gnuolane_rg_font_path">fonts/gnuolane_rg.ttf</string>
    <string name="gnuolane_rg_font_name">Gnuolane</string>
    <string name="carbon_bl_font_path">fonts/carbon_bl.ttf</string>
    <string name="carbon_bl_font_name">Carbon Bold</string>
    <string name="ashby_eb_font_path">fonts/ASHBEB__.ttf</string>
    <string name="ashby_eb_font_name">Ashby Extra Bold</string>
    <string name="asket_cdeb_font_path">fonts/Asket Condensed Extrabold.ttf</string>
    <string name="asket_cdeb_font_name">Asket Condensed Extrabold</string>
    <string name="asket_eb_font_path">fonts/Asket Extrabold.ttf</string>
    <string name="asket_eb_font_name">Asket Extrabold</string>
    <string name="modia_non_commercial_font_path">fonts/Modia-NonCommercial.otf</string>
    <string name="modia_non_commercial_font_name">Modia NonCommercial</string>
    <string name="qualio_font_path">fonts/Qualio.ttf</string>
    <string name="qualio_font_name">Qualio</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="title_nav_social">Social</string>
    <string name="title_nav_communicate">Communicate</string>
    <string name="title_nav_about">About</string>
    <string name="title_intent_share">Share</string>
    <string name="title_intent_primary">primary</string>
    <string name="title_intent_secondary">secondary</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_read">Read</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_tavern">Tavern</string>
    <string name="title_activity_blog">Blog</string>
    <string name="title_activity_help"><![CDATA[Help & FAQ]]></string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_bible">Bible</string>
    <string name="title_activity_remove_section">Remove Section</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_select_review_type">Select Review Type</string>
    <string name="default_profile_name">Joel Kingsley</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_authorization_went_wrong">Authorization went wrong</string>
    <string name="info_logging_in">Logging in</string>
    <string name="and">AND</string>
    <string name="select_secondary_version">Select Secondary Version</string>
    <string name="select_primary_version">Select Primary Version</string>
    <string name="used_for_parallel_reference">(Used for Parallel Reference)</string>
    <string name="of_1189_read_chapters">%1$d/1189 Read Chapters</string>
    <string name="percentage">%1$d%%</string>
    <string name="read">Read</string>
    <string name="default_verse_num">196</string>
    <string name="default_verse">And I sought for a man among them, that should make up the hedge, and stand in the gap before me for the land, that I should not destroy it: but I found none.</string>
    <string name="default_chapter_title">Jeremiah 1:1</string>
    <string name="default_book">Jeremiah</string>
    <string name="book_name_with_chap_num">%1$s %2$d</string>
    <string name="memorized">Memorized</string>
    <string name="_21_22">21/22</string>
    <string name="add_section">Add Section</string>
    <string name="remove_section">Remove Section</string>
    <string name="title_activity_add_section">Add Section</string>
    <string name="version">Version</string>
    <string name="book_name">Book Name</string>
    <string name="end_verse">End Verse</string>
    <string name="chapter_number">Chapter Number</string>
    <string name="start_verse">Start Verse</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="default_date_in_words">24 November 2019</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="date">%1$d %2$s %3$d</string>
    <string name="default_space">4</string>
    <string name="default_next_date_of_review">2018/11/24</string>
    <string name="show_of_selected_date">Show of Selected Date</string>
    <string name="show_all">Show All</string>
    <string name="default_memorized_verses">0</string>
    <string name="total_verses">217714</string>
    <string name="out_of">/</string>
    <string name="verses_memorized">Verses Memorized</string>
    <string name="equipped_sword">Equipped Sword</string>
    <string name="sword_1">Sword 1</string>
    <string name="sword_2">Sword 2</string>
    <string name="bronze_sword">Bronze Sword</string>
    <string name="verse_icon">Verse Icon</string>
    <string name="verse_cost">20</string>
    <string name="equipped">Equipped</string>
    <string name="equip">Equip</string>
    <string name="your_sword">Your Sword</string>
    <string name="memorized_verses">Memorized Verses</string>
    <string name="added_verses">Added Verses</string>
    <string name="badges">Badges</string>
    <string name="default_rank">1000</string>
    <string name="default_text_message">Welcome to GirdThySword Pro! I am Joel Kingsley, creator and lead developer of the GirdThySword app series.</string>
    <string name="type_a_message">Type a message</string>
    <string name="nothing_left_to_review">Nothing Left To Review</string>
    <string name="add_sections_by_clicking_the_icon">Add Sections By Clicking the + icon</string>
    <string name="codemercenaries">CodeMercenaries</string>
    <string name="developed_by">Developed By</string>
    <string name="joel_kingsley">Joel Kingsley</string>
    <string name="blog_link">https://joelkingsley.wordpress.com</string>
    <string name="skips_your_profile_in_the_leaderboard">Skips your profile in the Leaderboard</string>
    <string name="opt_out_of_leaderboard">Opt-out of Leaderboard</string>
    <string name="default_chunk_text">8 Write ye also for the Jews, as it liketh you, in the king\'s name, and seal it with the king\'s ring: for the writing which is written in the king\'s name, and sealed with the king\'s ring, may no man reverse.\n\n 9 Then were the king\'s scribes called at that time in the third month, that is, the month Sivan, on the three and twentieth day thereof; and it was written according to all that Mordecai commanded unto the Jews, and to the lieutenants, and the deputies and rulers of the provinces which are from India unto Ethiopia, an hundred twenty and seven provinces, unto every province according to the writing thereof, and unto every people after their language, and to the Jews according to their writing, and according to their language.\n\n  10 And he wrote in the king Ahasuerus\' name, and sealed it with the king\'s ring, and sent letters by posts on horseback, and riders on mules, camels, and young dromedaries:</string>
    <string name="manual">Manual</string>
    <string name="speech">Speech</string>
    <string name="title_activity_review">Review</string>
    <string name="title_fragment_speech_review">Speech Review</string>
    <string name="title_fragment_manual_review">Manual Review</string>
    <string name="default_chunk_title">Jeremiah 1:1&#8211;10</string>
    <string name="default_chunk_verse_title">Jeremiah 1:1</string>
    <string name="default_chunk_verse_text">And I sought for a man among them, that should make up the hedge, and stand in the gap before me for the land, that I should not destroy it: but I found none.</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="mastered">Mastered</string>
    <string name="verses_completed">3/3</string>
    <string name="continue_text">Continue</string>
    <string name="you_aced_it">You Aced It!</string>
    <string name="title_activity_result">Result</string>
    <string name="final_score_num">97</string>
    <string name="final_score">Final Score</string>
    <string name="genesis_1_1_7">Genesis 1:1&#8211;7</string>
    <string name="calculated_space">Calculated Space</string>
    <string name="next_date_of_review">Next Date of Review</string>
    <string name="done">Done</string>
    <string name="press_and_speak"><![CDATA[Press & Speak]]></string>
    <string name="your_input">Your Input</string>
    <string name="hard_response_message">That\'s Alright! Try Again Next Time</string>
    <string name="easy_response_message">Good Job Soldier!</string>
    <string name="mastered_response_message">Way to Go Soldier!!</string>
    <string name="speech_prompt">Speak the verse now</string>
    <string name="speech_not_supported">Speech is not supported in your Device</string>
    <string name="accuracy_90">Accuracy: 90%</string>
    <string name="accuracy_w_percentage">Accuracy: %1$f%%</string>
    <string name="what_can_this_app_do">What can this app do?</string>
</resources>