<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_activity_home" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/title_activity_stats" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_menu_read"
            android:title="@string/title_activity_read" />
    </group>

    <item android:title="@string/title_nav_social">
        <menu>
            <item
                android:id="@+id/nav_leaderboard"
                android:icon="@drawable/ic_menu_leaderboard"
                android:title="@string/title_activity_leaderboard" />
            <item
                android:id="@+id/nav_tavern"
                android:icon="@drawable/ic_menu_tavern"
                android:title="@string/title_activity_tavern" />
        </menu>
    </item>

    <item android:title="@string/title_nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_intent_share" />
        </menu>
    </item>

    <item android:title="@string/title_nav_about">
        <menu>
            <item
                android:id="@+id/nav_blog"
                android:icon="@drawable/ic_menu_blog"
                android:title="@string/title_activity_blog" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/title_activity_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/title_activity_about" />
        </menu>
    </item>

</menu>
