<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code.codemercenaries.girdthyswordpro.fragments.ManualReviewFragment">

    <LinearLayout
        android:id="@+id/chunk_verse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/verses_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verses_completed"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/chunk_verse_title"
            fontPath="@string/default_font_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/default_chunk_verse_title"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="MissingPrefix"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/chunk_verse_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/default_chunk_verse_text"/>

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/responseMessage"
        fontPath="@string/ashby_eb_font_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continue_button"
        android:text="@string/you_aced_it"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/hard"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/easy"/>

        <Button
            android:id="@+id/mastered"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/mastered"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/continue_text"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
