<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.code.codemercenaries.girdthyswordpro.activities.ResultActivity"
    tools:showIn="@layout/activity_result">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/final_score_num"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/final_score"
                android:layout_centerHorizontal="true"
                android:text="@string/final_score" />

            <TextView
                android:id="@+id/chunk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/genesis_1_1_7"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chunk_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/default_space"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/calculated_space" />

            <TextView
                android:id="@+id/next_date_of_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:text="@string/default_next_date_of_review"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next_date_of_review"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/next_date_of_review" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/done"/>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
