<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/senderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:text="@string/default_profile_name"/>

    <TextView
        android:id="@+id/textMessage"
        fontPath="@string/gnuolane_rg_font_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/senderName"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:autoLink="web"
        android:background="@drawable/shape_bg_outgoing_bubble"
        android:paddingBottom="20dp"
        android:paddingEnd="35dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/default_text_message"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/holo_blue_dark"
        tools:ignore="MissingPrefix" />

</RelativeLayout>
